--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "semantic-release": "^15.13.19"
   },
   "devDependencies": {
     "chai": "^4.2.0",
